Review Request 13731: PLS-7291 Fix tooltip in attribute tile view for string and enum types PLS-7294 Fix CSS causing issues for input fields in AQB in Safari Also refactored part of tree component to be more readable

--- a/le-ui/projects/common/assets/sass/_common-page-components.scss
+++ b/le-ui/projects/common/assets/sass/_common-page-components.scss
@@ -101,7 +101,7 @@ Content Panels
 .noselect-children,
 .noselect-children * {
   -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -webkit-user-select: text; /* Chrome/Safari/Opera */
      -khtml-user-select: none; /* Konqueror */
        -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* Internet Explorer/Edge */
